# proxy-wasm-rust

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml
envoy/: .dockerignore  Dockerfile.proxy  envoy.yaml
src/: lib.rs
